--- a/TriviaPro/TriviaPro.csproj
+++ b/TriviaPro/TriviaPro.csproj
@@ -46,12 +46,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Clases\Jugador.cs" />
+    <Compile Include="Clases\PreguntaDificil.cs" />
+    <Compile Include="Clases\PreguntaFacil.cs" />
+    <Compile Include="Clases\PreguntaFactory.cs" />
+    <Compile Include="Clases\PreguntaMedia.cs" />
+    <Compile Include="Clases\Puntaje.cs" />
+    <Compile Include="Clases\TemporizadorTrivia.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Clases\Pregunta.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
